# docs-template

./: 404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/actions/setup-poetry/: action.yml
.github/workflows/: initialization.yml  python-docs-release.yml  security-codeql.yml  security-semgrep.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
docs/: initialization.md
docs/py-template/: coverage.md  faq.md  functionality.md  integration.md  lint.md  private.md  setup.md  tricks.md  version.md
docs/template/: functionality.md  setup.md
initialization/: index.html
py-template/coverage/: index.html
py-template/faq/: index.html
py-template/functionality/: index.html
py-template/integration/: index.html
py-template/lint/: index.html
py-template/private/: index.html
py-template/setup/: index.html
py-template/tricks/: index.html
py-template/version/: index.html
search/: search_index.json
template/functionality/: index.html
template/setup/: index.html
tests/: README.md
