[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

###############################################################################
#
#                               POETRY
#
###############################################################################

[tool.poetry]
name = "docs-template"
version = "0.0.0"
description = "Documentation for the *-template projects"
authors = ["inovintell"]
maintainers = ["inovintell"]
readme = "README.md"

[tool.poetry.dependencies]
python="^3.8"

# Docs
mkdocs = { version = "^1.3.0", optional = true }
mkdocs-material = { version = "^9.0.0", optional = true }
mkdocstrings = { version = "^0.22.0", optional = true }
mkdocstrings-python = { version = "^1.0.0", optional = true }
mkdocs-literate-nav = { version = "^0.6.0", optional = true }
mkdocs-section-index = { version = "^0.3.4", optional = true }
mkdocs-gen-files = { version = "^0.5.0", optional = true }
mkdocs-minify-plugin = { version = "^0.7.0", optional = true }

[tool.poetry.extras]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python",
  "mkdocs-literate-nav",
  "mkdocs-section-index",
  "mkdocs-gen-files",
  "mkdocs-minify-plugin",
]
